--- a/packages/oss-electrode-component-sass-example/src/styles/oss-electrode-component-sass-example.scss
+++ b/packages/oss-electrode-component-sass-example/src/styles/oss-electrode-component-sass-example.scss
@@ -1,17 +1,15 @@
-@value grey: #8C8B8B;
-
 .container {
   font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0 auto;
   text-align: center;
   width: 70%;
-}
 
-.container hr {
-  border-top: 1px solid grey;
-  margin: 50px 0;
-}
+  hr {
+    border-top: 1px solid #8C8B8B;
+    margin: 50px 0;
+  }
 
-.container h4 {
-  text-align: left;
+  h4 {
+    text-align: left;
+  }
 }
