small fixes & add demo image

--- a/packages/oss-electrode-component-sass-example/demo/demo.css
+++ b/packages/oss-electrode-component-sass-example/demo/demo.css
@@ -1,3 +1,3 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.33.0/codemirror.min.css");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.33.0/theme/monokai.min.css");
-@import url("../src/styles/oss-electrode-component-sass-example.css");
+@import url("../src/styles/oss-electrode-component-sass-example.scss");
