--- a/packages/oss-electrode-component-sass-example/src/styles/oss-electrode-component-sass-example.scss
+++ b/packages/oss-electrode-component-sass-example/src/styles/oss-electrode-component-sass-example.scss
@@ -1,3 +1,5 @@
+@import "vars.scss";
+
 .container {
   font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0 auto;
@@ -5,7 +7,7 @@
   width: 70%;
 
   hr {
-    border-top: 1px solid #8C8B8B;
+    border-top: 1px solid $border-gray;
     margin: 50px 0;
   }
 
